Partial fix for grid scrolling, but tall grids cause two scrollbars

--- a/ui/client-react/src/components/report/report.scss
+++ b/ui/client-react/src/components/report/report.scss
@@ -6,6 +6,7 @@
     overflow-y: auto;
     display: flex;
     flex-direction: column;
+    height: 100%;
 
     .layout-stage {
         flex: 0 0 auto;
@@ -41,6 +42,7 @@
     flex: 1 1 auto;
     flex-direction: column;
     position: relative;
+    height: 100%;
     //min-height is required in order for the scrollbar to work in firefox
     min-height: 0;
 
